Added some varying state examples.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -64,7 +64,7 @@
                         <span class="dd">{{update.content}}</span>
                       </li>
 
-                      <p class="no-updates" ng-hide="apology.updates.length"><!-- t '.no_updates' --></p>
+                      <p class="no-updates" ng-hide="apology.updates.length">No further updates on this.</p>
                     </ul>
                   </article>
                 </div>
@@ -95,7 +95,7 @@
                     <span class="dd">{{update.content}}</span>
                   </li>
 
-                  <p class="no-updates" ng-hide="apology.updates.length"><!-- t '.no_updates' --></p>
+                  <p class="no-updates" ng-hide="apology.updates.length">No further updates on this.</p>
                 </ul>
               </article>
             </div>
@@ -104,7 +104,7 @@
 
         <!-- Close Out With A 'Powered By' Statement. -->
         <footer>
-          <p class="powered-by"><!-- t 'powered_by' --></p>
+          <p class="powered-by">Powered By Sorry</p>
         </footer>
       {% endraw %}
 
