--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,125 +1,127 @@
 <!DOCTYPE html>
 <html lang="en" ng-app="myApp">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- We don't want these pages indexed by Google until BETA. -->
-    <meta name="robots" content="noindex, nofollow" />
+        <!-- We don't want these pages indexed by Google until BETA. -->
+        <meta name="robots" content="noindex, nofollow" />
 
-    <!-- Dynamicly set the title using the helper methoe. -->
-    <title></title>
+        <!-- Dynamicly set the title using the helper methoe. -->
+        <title>{% raw %}{{page.name}}{% endraw %}</title>
 
-    <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
-    <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script>
-    <![endif]-->
+        <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
+        <!--[if lt IE 9]>
+            <script src="http://html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script>
+        <![endif]-->
 
-    <!-- Include Local CSS Assets. -->
-    {% css_asset_tag global %}
-        # Framework stylesheets.
-        - /_assets/stylesheets/bootstrap.css
-        - /_assets/stylesheets/bootstrap-responsive.css
+        <!-- Include Local CSS Assets. -->
+        {% css_asset_tag global %}
+            # Framework stylesheets.
+            - /_assets/stylesheets/bootstrap.css
+            - /_assets/stylesheets/bootstrap-responsive.css
 
-        # Site specific stylesheets.
-        - /_assets/stylesheets/status-page.css.scss
-    {% endcss_asset_tag %}
-  </head>
-  <body data-key="22244659ec2ca1550461" data-channel="status-page" ng-controller="PageCtrl">
-      <!-- Include Page Content. -->
-      {{content}}
+            # Site specific stylesheets.
+            - /_assets/stylesheets/status-page.css.scss
+        {% endcss_asset_tag %}
+    </head>
+    <body data-key="22244659ec2ca1550461" data-channel="status-page" ng-controller="PageCtrl">
+        <!-- Include Page Content. -->
+        <script id="apologies-data" type="application/json">
+            {{content}}
+        </script>
 
-      <!-- Have Jekyll Ignore All Liquid From Hereon In. -->
-      {% raw %}
-        <!-- Header Block For Large Status Message -->
-        <header id="current-status" class="current-status sorry-{{sorry()}} container-fluid" ng-switch="sorry()">
-          <h1>Page Title</h1>
+        <!-- Have Jekyll Ignore All Liquid From Hereon In. -->
+        {% raw %}
+            <!-- Header Block For Large Status Message -->
+            <header id="current-status" class="current-status sorry-{{sorry()}} container-fluid" ng-switch="sorry()">
+                <h1>{{page.name}}</h1>
 
-          <div ng-switch-when="false">
-            <div class="horizon">
-              <div class="content">
-                <h2 id="status">All Is Well</h2>
-              </div>
-            </div>    
-          </div>
-          <div ng-switch-when="true">
-            <!-- Block For Currently Running apology. -->
-            <section id="current-apologies" ng-show="open_apologies().length">
-              <div class="row-fluid">
-                <div class="span12">
-                  <article ng-repeat="apology in apologies | filter:{state:'open'}" class="apology" id="apology_{apology.id}">
-                    <!-- Output the title for the apology. -->
-                    <h4>
-                      <span>Started <time class="live" data-stamp="{{apology.created_at}}"></time></span>
-
-                      {{apology.description}}
-                    </h4>
-
-                    <ul class="updates unstyled">
-                      <!-- Loop The Updates. -->
-                      <li ng-repeat="update in apology.updates">
-                        <!-- Output Update Details. -->
-                        <time class="live dt" data-stamp="{{update.created_at}}"></time>
-                        <span class="dd">{{update.content}}</span>
-                      </li>
-
-                      <p class="no-updates" ng-hide="apology.updates.length">No further updates on this.</p>
-                    </ul>
-                  </article>
+                <div ng-switch-when="false">
+                    <div class="horizon">
+                        <div class="content">
+                            <h2 id="status">All Is Well</h2>
+                        </div>
+                    </div>    
                 </div>
-              </div>
+                <div ng-switch-when="true">
+                    <!-- Block For Currently Running apology. -->
+                    <section id="current-apologies" ng-show="open_apologies().length">
+                        <div class="row-fluid">
+                            <div class="span12">
+                                <article ng-repeat="apology in page.apologies | filter:{state:'open'}" class="apology" id="apology_{apology.id}">
+                                    <!-- Output the title for the apology. -->
+                                    <h4>
+                                        <span>Started <time class="live" data-stamp="{{apology.created_at}}"></time></span>
+
+                                        {{apology.description}}
+                                    </h4>
+
+                                    <ul class="updates unstyled">
+                                        <!-- Loop The Updates. -->
+                                        <li ng-repeat="update in apology.updates">
+                                            <!-- Output Update Details. -->
+                                            <time class="live dt" data-stamp="{{update.created_at}}"></time>
+                                            <span class="dd">{{update.content}}</span>
+                                        </li>
+
+                                        <p class="no-updates" ng-hide="apology.updates.length">No further updates on this.</p>
+                                    </ul>
+                                </article>
+                            </div>
+                        </div>
+                    </section>
+                </div>
+            </header>
+
+            <!-- Block For Previously Solved. -->
+            <section id="previous-apologies" ng-show="closed_apologies().length" class="container-fluid">
+                <div class="row-fluid">
+                    <div class="span12">
+                        <h3>Previous Apologies</h3>
+
+                        <article ng-repeat="apology in page.apologies | filter:{state:'closed'}" class="apology" id="apology_{apology.id}">
+                            <!-- Output the title for the apology. -->
+                            <h4>
+                                <span>Started <time>{{apology.created_at | date:'short'}}</time></span>
+
+                                {{apology.description}}
+                            </h4>
+
+                            <ul class="updates unstyled">
+                                <!-- Loop The Updates. -->
+                                <li ng-repeat="update in apology.updates">
+                                    <!-- Output Update Details. -->
+                                    <time class="live dt">{{update.created_at | date:'short'}}</time>
+                                    <span class="dd">{{update.content}}</span>
+                                </li>
+
+                                <p class="no-updates" ng-hide="apology.updates.length">No further updates on this.</p>
+                            </ul>
+                        </article>
+                    </div>
+                </div>
             </section>
-          </div>
-        </header>
 
-        <!-- Block For Previously Solved. -->
-        <section id="previous-apologies" ng-show="closed_apologies().length" class="container-fluid">
-          <div class="row-fluid">
-            <div class="span12">
-              <h3>Previous Apologies</h3>
+            <!-- Close Out With A 'Powered By' Statement. -->
+            <footer>
+                <p class="powered-by">Powered By Sorry</p>
+            </footer>
+        {% endraw %}
 
-              <article ng-repeat="apology in apologies | filter:{state:'closed'}" class="apology" id="apology_{apology.id}">
-                <!-- Output the title for the apology. -->
-                <h4>
-                  <span>Started <time>{{apology.created_at | date:'short'}}</time></span>
+        <!-- Asset Pipeline JS Files. -->
+        {% javascript_asset_tag global %}
+            # Framework assets.
+            - /_assets/javascripts/jquery.js
+            - /_assets/javascripts/moment.js
+            - /_assets/javascripts/angular.min.js
+            - /_assets/javascripts/angular-resource.min.js
+            - /_assets/javascripts/pusher.js
 
-                  {{apology.description}}
-                </h4>
-
-                <ul class="updates unstyled">
-                  <!-- Loop The Updates. -->
-                  <li ng-repeat="update in apology.updates">
-                    <!-- Output Update Details. -->
-                    <time class="live dt">{{update.created_at | date:'short'}}</time>
-                    <span class="dd">{{update.content}}</span>
-                  </li>
-
-                  <p class="no-updates" ng-hide="apology.updates.length">No further updates on this.</p>
-                </ul>
-              </article>
-            </div>
-          </div>
-        </section>
-
-        <!-- Close Out With A 'Powered By' Statement. -->
-        <footer>
-          <p class="powered-by">Powered By Sorry</p>
-        </footer>
-      {% endraw %}
-
-      <!-- Asset Pipeline JS Files. -->
-      {% javascript_asset_tag global %}
-        # Framework assets.
-        - /_assets/javascripts/jquery.js
-        - /_assets/javascripts/moment.js
-        - /_assets/javascripts/angular.min.js
-        - /_assets/javascripts/angular-resource.min.js
-        - /_assets/javascripts/pusher.js
-
-        # Site Assets.
-        - /_assets/javascripts/status-page.js.coffee
-        - /_assets/javascripts/status-page-dynamic.js
-      {% endjavascript_asset_tag %}
-  </body>
+            # Site Assets.
+            - /_assets/javascripts/status-page.js.coffee
+            - /_assets/javascripts/status-page-dynamic.js
+        {% endjavascript_asset_tag %}
+    </body>
 </html>
