Split up some of the front-end resources.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,9 @@
             - /_assets/stylesheets/bootstrap-responsive.css
 
             # Site specific stylesheets.
-            - /_assets/stylesheets/status-page.css.scss
+            - /_assets/stylesheets/sorry.layout.css.scss
+            - /_assets/stylesheets/sorry.colour-and-texture.css.scss
+            - /_assets/stylesheets/sorry.typography.css.scss
         {% endcss_asset_tag %}
     </head>
     <body ng-controller="PageCtrl">
