Implemented the opensans font.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,6 +22,9 @@
             - /_assets/stylesheets/bootstrap.css
             - /_assets/stylesheets/bootstrap-responsive.css
 
+            # Fonts.
+            - /_assets/stylesheets/opensans.css            
+
             # Site specific stylesheets.
             - /_assets/stylesheets/sorry.layout.css.scss
             - /_assets/stylesheets/sorry.colour-and-texture.css.scss
