--- a/_assets/stylesheets/sorry.colour-and-texture.css.scss
+++ b/_assets/stylesheets/sorry.colour-and-texture.css.scss
@@ -4,6 +4,7 @@
 $color-status-green: #7AB800;
 $color-status-orange: #F86F24;
 $color-white: #FFFFFF;
+$color-faded-white: rgba(255, 255, 255, 0.1);
 
 /*
 	Header Box.
@@ -19,4 +20,12 @@ header.sorry-true {
 
 header.sorry-false {
 	background-color: $color-status-green;
+}
+
+/*
+	Apology Blocks.
+*/
+
+header article {
+	background-color: $color-faded-white;
 }
