Tidyup on the CSS centering business.

--- a/_assets/stylesheets/sorry.layout.css.scss
+++ b/_assets/stylesheets/sorry.layout.css.scss
@@ -5,6 +5,7 @@ body, html {
 }
 
 /* Header Block Layouts. */
+/* Vertical Centering Trick: http://css-tricks.com/centering-in-the-unknown/ */
 
 header {
 	height:100%;
@@ -15,20 +16,19 @@ header {
 		top:0;
 		right:0;
 	}
+
+	.current-status {
+		display: inline-block;
+		vertical-align: middle;
+		text-align:left;
+		width:99%;
+	}
 }
 
-/* The ghost, nudged to maintain perfect centering */
 header:before {
   content: '';
   display: inline-block;
   height: 100%;
   vertical-align: middle;
   background-color:#FFF;
-}
-
-.current-status {
-  display: inline-block;
-  vertical-align: middle;
-  text-align:left;
-  width:99%;
 }
