--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,6 +20,7 @@
         {% css_asset_tag global %}
             # Framework stylesheets.
             - /_assets/stylesheets/bootstrap.css
+            - /_assets/stylesheets/bootstrap-responsive.css
 
             # Fonts.
             - /_assets/stylesheets/opensans.css            
