--- a/_assets/stylesheets/sorry.typography.css.scss
+++ b/_assets/stylesheets/sorry.typography.css.scss
@@ -53,3 +53,14 @@ footer {
 	opacity: 0.7;
 	font-size: 1.143em;
 }
+
+/* Links */
+
+a.see-below {
+	font-size:2em;
+	line-height:2em;
+}
+
+a.see-below:hover {
+	text-decoration: none;
+}
