--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -69,6 +69,8 @@
                         </article>
                     </div>
                 </div>
+
+                <a href="#previous-apologies" class="see-below">&#65088;</a>
             </header>
 
             <!-- Block For Previously Solved. -->
