--- a/_assets/stylesheets/sorry.colour-and-texture.css.scss
+++ b/_assets/stylesheets/sorry.colour-and-texture.css.scss
@@ -3,6 +3,7 @@ $color-status-green: #7AB800;
 $color-status-orange: #F86F24;
 $color-white: #FFFFFF;
 $color-faded-white: rgba(255, 255, 255, 0.1);
+$color-faded-black: rgba(0, 0, 0, 0.05);
 $color-grey: #666;
 
 /* Header Box. */
@@ -29,4 +30,14 @@ header article {
 
 .previous-apologies {
 	color: $color-grey !important;
+}
+
+/* Links */
+
+a.see-below {
+	color: $color-white;
+}
+
+a.see-below:hover {
+	background-color: $color-faded-black;
 }
