Added layout and spacing to the previous apologies section.

--- a/_assets/stylesheets/sorry.colour-and-texture.css.scss
+++ b/_assets/stylesheets/sorry.colour-and-texture.css.scss
@@ -26,13 +26,13 @@ header article {
 	background-color: $color-faded-white;
 }
 
-/* Previous Apologies Block */
+/* Previous Apologies Block. */
 
 .previous-apologies {
 	color: $color-grey !important;
 }
 
-/* Links */
+/* Links. */
 
 a.see-below {
 	color: $color-white;
