Subtle colour changes to the orange to match the mocks better.

--- a/_assets/stylesheets/sorry.colour-and-texture.css.scss
+++ b/_assets/stylesheets/sorry.colour-and-texture.css.scss
@@ -1,8 +1,8 @@
 /* Color Pallet */
 $color-status-green: #7AB800;
-$color-status-orange: #F86F24;
+$color-status-orange: #FF7B29;
 $color-white: #FFFFFF;
-$color-faded-white: rgba(255, 255, 255, 0.1);
+$color-faded-white: rgba(255, 255, 255, 0.05);
 $color-faded-black: rgba(0, 0, 0, 0.05);
 $color-grey: #666;
 
