--- a/_assets/stylesheets/sorry.typography.css.scss
+++ b/_assets/stylesheets/sorry.typography.css.scss
@@ -18,6 +18,7 @@ h1 {
 
 h2 {
 	font-size: 2.286em;
+	margin-bottom:1em;
 }
 
 h3 {
@@ -26,7 +27,7 @@ h3 {
 }
 
 h4 {
-	font-family: "OpenSansSemibold";
+	font-family: "OpenSansRegular";
 	font-size: 1.714em;
 	line-height: 1.3em;
 	margin-bottom:1em;
@@ -34,8 +35,16 @@ h4 {
 
 h2 span, h3 span, h4 span {
 	display:block;
-	font-size: 0.7em;
+	font-size: 0.6em;
 	opacity:0.7;
+}
+
+h3 span {
+	font-size: 0.8em;
+}
+
+h4 span {
+	font-size:0.7em;
 }
 
 /* Lists. */
