Tidy up of the way that filters are applied to the page scope, also confitional show of carousal nav so only when more than single item.

--- a/_assets/stylesheets/sorry.layout.css.scss
+++ b/_assets/stylesheets/sorry.layout.css.scss
@@ -39,6 +39,12 @@ header {
 		padding:10px 0 40px 0;
 	}
 
+	.carousel-indicators {
+		position:absolute;
+		top:60px;
+		left:60px;
+	}
+
 	article {
 		padding:$layout-gutter;
 	}
