--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,7 +52,7 @@
                     </div>
                     <div ng-switch-when="true">
                         <div class="carousel-inner">
-                            <article ng-repeat="apology in current_apologies()" class="apology item" ng-class="{active : $first, item : true}">
+                            <article ng-repeat="apology in current_apologies() | orderBy:'created_at':true" class="apology item" ng-class="{active : $first, item : true}">
                                 <!-- Output the title for the apology. -->
                                 <h2>
                                     <span>Started <time class="live" data-stamp="{{apology.created_at}}"></time></span>
@@ -60,7 +60,7 @@
                                     {{apology.description}}
                                 </h2>
 
-                                <h3 ng-repeat="update in apology.updates | limitTo:1">
+                                <h3 ng-repeat="update in apology.updates | orderBy:'created_at':true | limitTo:1">
                                     <span>
                                         Last Updated 
                                         <time class="live dt" data-stamp="{{update.created_at}}"></time>
@@ -81,7 +81,7 @@
 
             <!-- Block For Previously Solved. -->
             <section id="previous-apologies" class="previous-apologies">
-                <article ng-repeat="apology in previous_apologies()" class="apology" id="apology_{apology.id}">
+                <article ng-repeat="apology in previous_apologies() | orderBy:'created_at':true" class="apology" id="apology_{apology.id}">
                     <!-- Output the title for the apology. -->
                     <h4>
                         <span>Started <time>{{apology.created_at | date:'short'}}</time></span>
@@ -91,7 +91,7 @@
 
                     <ul class="updates unstyled">
                         <!-- Loop The Updates. -->
-                        <li ng-repeat="update in apology.updates">
+                        <li ng-repeat="update in apology.updates | orderBy:'created_at'">
                             <!-- Output Update Details. -->
                             <time class="dt">{{update.created_at | date:'short'}}</time>
                             <span class="dd">{{update.content}}</span>
