Added a mouse-over effect to the carousel navigation.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,6 +30,7 @@
             - /_assets/stylesheets/sorry.layout.css.scss
             - /_assets/stylesheets/sorry.colour-and-texture.css.scss
             - /_assets/stylesheets/sorry.typography.css.scss
+            - /_assets/stylesheets/sorry.interactions.css.scss
         {% endcss_asset_tag %}
     </head>
     <body ng-controller="PageCtrl">
