--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -137,6 +137,7 @@
             - /_assets/javascripts/bootstrap.js
             - /_assets/javascripts/moment.js
             - /_assets/javascripts/angular.min.js
+            - /_assets/javascripts/smooth-anchor.js.coffee
 
             # Site Assets.
             - /_assets/javascripts/status-page.js.coffee
