Basic working concept for pusher integration, the carousel does not work yet for multiple apologies.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -135,11 +135,13 @@
             # Framework assets.
             - /_assets/javascripts/jquery.js
             - /_assets/javascripts/bootstrap.js
+            - /_assets/javascripts/pusher.js
             - /_assets/javascripts/moment.js
             - /_assets/javascripts/angular.min.js
             - /_assets/javascripts/smooth-anchor.js.coffee
 
             # Site Assets.
+            - /_assets/javascripts/page-controller.js.coffee
             - /_assets/javascripts/status-page.js.coffee
         {% endjavascript_asset_tag %}
     </body>
