--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,7 +52,7 @@
                     <div ng-switch-when="true">
                         <div class="carousel-inner">
                             <!-- Loop over the collection of current apologies. -->
-                            <article ng-repeat="apology in current_apologies() | orderBy:'created_at':true" class="apology item" ng-class="{active : $first, item : true}">
+                            <article ng-repeat="apology in current_apologies() | orderBy:'created_at':true" class="apology item" ng-class="{active : $first}" id="apology_{{apology.id}}">
                                 <!-- Output the title for the apology. -->
                                 <h2>
                                     <!-- Output the date the apology was created, with live timer increment. -->
@@ -89,7 +89,7 @@
                     <!-- Ouput a buller for each -->
                     <!-- Add nav data to the apologies array index. -->
                     <!-- Apply an active state to the first in the queue for page load. -->
-                    <li ng-repeat="apology in current_apologies()" data-target="#carousel" data-slide-to="{{$index}}" ng-class="{active : $first, item : true}"></li>
+                    <li ng-repeat="apology in current_apologies()" data-target="#carousel" data-slide-to="{{$index}}" ng-class="{active : $first}"></li>
                 </ol>                
 
                 <a href="#previous-apologies" ng-show="previous_apologies().length > 0" class="see-below">&#65088;</a>
@@ -133,6 +133,7 @@
         {% javascript_asset_tag global %}
             # Framework assets.
             - /_assets/javascripts/jquery.js
+            - /_assets/javascripts/jquery-ui.js
             - /_assets/javascripts/bootstrap.js
             - /_assets/javascripts/pusher.js
             - /_assets/javascripts/moment.js
