Switched from bootstrao carousel to the angular ui caorusel as this works much better when it comes to dynamic content.

--- a/_assets/stylesheets/sorry.colour-and-texture.css.scss
+++ b/_assets/stylesheets/sorry.colour-and-texture.css.scss
@@ -22,8 +22,12 @@ header.sorry-false {
 
 /* Apology Blocks. */
 
-header article {
+header .apology {
 	background-color: $color-faded-white;
+}
+
+header .carousel {
+	position:inherit;
 }
 
 /* Previous Apologies Block. */
