--- a/_assets/stylesheets/sorry.typography.css.scss
+++ b/_assets/stylesheets/sorry.typography.css.scss
@@ -77,3 +77,12 @@ a.see-below {
 a.see-below:hover {
 	text-decoration: none;
 }
+
+
+/* Mobile Styles. */
+
+@media (max-width: 767px) {
+	header.sorry-true h2 {
+		font-size:2em;
+	}
+}
