--- a/src/stylesheets/partials/layout.less
+++ b/src/stylesheets/partials/layout.less
@@ -1,6 +1,6 @@
 /* Commonly Used Layout Elements. */
-$layout-gutter: 60px;
-$mobile-layout-gutter: 40px;
+@layout-gutter: 60px;
+@mobile-layout-gutter: 40px;
 
 /* Default  Layout. */
 
@@ -19,7 +19,7 @@ header {
 		position:absolute;
 		top:0;
 		left:0;
-		padding:$layout-gutter;
+		padding:@layout-gutter;
 		margin:0;
 	}
 
@@ -42,8 +42,8 @@ header {
 	.carousel-indicators {
 		position:absolute;
 		padding:15px 0;
-		top:$layout-gutter;
-		left:$layout-gutter;
+		top:@layout-gutter;
+		left:@layout-gutter;
 	}
 
 	.carousel-control {
@@ -51,7 +51,7 @@ header {
 	}
 
 	.apology {
-		padding:$layout-gutter;
+		padding:@layout-gutter;
 	}
 }
 
@@ -66,10 +66,10 @@ header:before {
 /* Core Sections. */
 
 section.previous-apologies {
-	padding:$layout-gutter;
+	padding:@layout-gutter;
 
 	article {
-		padding-bottom:$layout-gutter;
+		padding-bottom:@layout-gutter;
 	}
 }
 
@@ -77,7 +77,7 @@ section.previous-apologies {
 
 footer {
 	text-align:left;
-	padding:$layout-gutter;
+	padding:@layout-gutter;
 }
 
 /* Lists. */
@@ -105,23 +105,23 @@ ul.updates > li > time {
 	header {
 		h1 {
 			position:static;
-			padding:$mobile-layout-gutter;
+			padding:@mobile-layout-gutter;
 			text-align:left;
 			line-height:1.4em;
 		}
 
 		article {
-			padding:$mobile-layout-gutter;
+			padding:@mobile-layout-gutter;
 		}
 
 		.apology {
-			padding:$mobile-layout-gutter;
+			padding:@mobile-layout-gutter;
 		}
 
 		.carousel-indicators {
 			position:static;
 			margin:0 auto;
-			padding:$mobile-layout-gutter;
+			padding:@mobile-layout-gutter;
 		}			
 	}
 
@@ -131,15 +131,15 @@ ul.updates > li > time {
 	}
 
 	section.previous-apologies {
-		padding:$mobile-layout-gutter;
+		padding:@mobile-layout-gutter;
 
 		article {
-			padding-bottom:$mobile-layout-gutter;
+			padding-bottom:@mobile-layout-gutter;
 		}
 	}
 
 	footer {
 		text-align:left;
-		padding:$mobile-layout-gutter;
+		padding:@mobile-layout-gutter;
 	}	
 }
