Switched open sans over to the google font source.

--- a/src/stylesheets/partials/custom-bootstrap.less
+++ b/src/stylesheets/partials/custom-bootstrap.less
@@ -2,3 +2,5 @@
 @import "../vendor/bootstrap/bootstrap.less";
 
 // Put all your custom configuration and overrides below this line.
+// Typography
+@font-family-sans-serif: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif; 
