--- a/src/stylesheets/partials/typography.less
+++ b/src/stylesheets/partials/typography.less
@@ -1,9 +1,5 @@
 /* Basic Typographic Styles. */
 
-html, body {
-	font-family: "OpenSansLight";
-}
-
 /* Headings. */
 
 h1, h2, h3, h4, h4, h6 {
@@ -13,10 +9,12 @@ h1, h2, h3, h4, h4, h6 {
 h1 {
 	font-size: 1.143em;
 	opacity:0.7;
+	font-weight:300;
 }
 
 h2 {
 	font-size: 2.286em;
+	font-weight:300;
 }
 
 h3 {
@@ -25,7 +23,6 @@ h3 {
 }
 
 h4 {
-	font-family: "OpenSansRegular";
 	font-size: 1.714em;
 	line-height: 1.3em;
 	margin-bottom:1em;
