Removed a bunch of legacy LESS which we're not likely to need anymore.

--- a/src/stylesheets/main.less
+++ b/src/stylesheets/main.less
@@ -5,6 +5,4 @@
 @import "partials/custom-bootstrap.less";
 
 // Partials.
-@import "partials/layout.less";
-@import "partials/typography.less";
-@import "partials/colour-and-texture.less";
+// Include your custom CSS files here as above.
