Basic bootstrap setup and typography on the page.

--- a/src/stylesheets/main.less
+++ b/src/stylesheets/main.less
@@ -6,3 +6,7 @@
 
 // Partials.
 // Include your custom CSS files here as above.
+@import "partials/layout.less";
+@import "partials/type.less";
+@import "partials/states.less";
+@import "partials/apologies.less";
