--- a/src/stylesheets/partials/custom-bootstrap.less
+++ b/src/stylesheets/partials/custom-bootstrap.less
@@ -2,5 +2,18 @@
 @import "../vendor/bootstrap/bootstrap.less";
 
 // Put all your custom configuration and overrides below this line.
+// Colours.
+@brand-success: #7AB800;
+@brand-warning: #FF7B29;
+
 // Typography
 @font-family-sans-serif: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif; 
+@font-size-base: 18px;
+@font-weight-base: 300;
+
+// Headings.
+@font-size-h1: 16px;
+@font-size-h2: 24px;
+@font-size-h3: 21px;
+@headings-font-weight: 300;
+@headings-line-height:1.5;
