--- a/src/stylesheets/partials/custom-bootstrap.less
+++ b/src/stylesheets/partials/custom-bootstrap.less
@@ -14,6 +14,10 @@
 // Headings.
 @font-size-h1: 16px;
 @font-size-h2: 24px;
-@font-size-h3: 21px;
+@font-size-h3: 24px;
+@font-size-h4: 21px;
 @headings-font-weight: 300;
 @headings-line-height:1.5;
+
+// Grid.
+@grid-verticle-gutter-width: 50px; // Our own custom variable, not used within bootstrap.
