--- a/src/stylesheets/partials/type.less
+++ b/src/stylesheets/partials/type.less
@@ -4,6 +4,16 @@ html, body {
 	font-weight: @font-weight-base;
 }
 
+/* Headings. */
+
+h2, h3 {
+	margin-top:0;
+}
+
+.page-title {
+	padding:(@grid-verticle-gutter-width / 2) 0;
+}
+
 /* Links. */
 
 a.see-below {
@@ -26,7 +36,7 @@ dt {
 }
 
 dl {
-	margin-bottom: @line-height-computed * 1.5;
+	margin-bottom:0;
 }
 
 dt,
