A bunch of markup and style changes.

--- a/src/stylesheets/partials/apologies.less
+++ b/src/stylesheets/partials/apologies.less
@@ -1,9 +1,10 @@
-.apology {
-	background-color: rgba(255, 255, 255, 0.05);
+.status-notice {
 	padding-bottom:@grid-verticle-gutter-width;
+	background-color: rgba(255, 255, 255, 0.05);
+
 }
 
-.apology:first-child {
+.status-notice:first-child {
 	padding-top:@grid-verticle-gutter-width;
 }
 
