Initial rough draft of the flex box model.

--- a/src/stylesheets/partials/apologies.less
+++ b/src/stylesheets/partials/apologies.less
@@ -1,7 +1,6 @@
 .status-notice {
 	padding-bottom:@grid-verticle-gutter-width;
 	background-color: rgba(255, 255, 255, 0.05);
-
 }
 
 .status-notice:first-child {
@@ -10,6 +9,17 @@
 
 .previous-apology {
 	border-bottom:1px solid #EFEFEF;
+}
+
+.current-state {
+	display: -webkit-box;
+	-webkit-box-orient: horizontal;
+	-webkit-box-pack: center;
+	-webkit-box-align: center;
+}
+
+.status-notices {
+	width:100%;
 }
 
 @media (min-width: @grid-float-breakpoint) {
