More clever flexbox stuff for organising and aligning content.

--- a/src/stylesheets/partials/apologies.less
+++ b/src/stylesheets/partials/apologies.less
@@ -15,8 +15,10 @@
 	display:flex;
 	flex-direction:column;
 	align-items:center;
-	justify-content: center;
+	justify-content: space-between;
 }
+
+
 
 .status-notices {
 	width:100%;
