--- a/src/stylesheets/partials/type.less
+++ b/src/stylesheets/partials/type.less
@@ -16,12 +16,13 @@ h2, h3 {
 
 /* Links. */
 
-a.see-below {
+.see-below {
 	line-height:2em;
 	display:block;
 	text-align:center;
 	color:#FFF;
 	padding:30px 0;
+	opacity:0.5;
 }
 
 a.see-below:hover {
