Width fixes to the box model.

--- a/src/stylesheets/partials/type.less
+++ b/src/stylesheets/partials/type.less
@@ -23,11 +23,14 @@ h2, h3 {
 	color:#FFF;
 	padding:30px 0;
 	opacity:0.5;
+	width:100%;
 }
 
 a.see-below:hover {
 	text-decoration: none; // Remove the underline effect.
 	background-color: rgba(0, 0, 0, 0.03); // Highlight the bar with a darker tint.
+	opacity:1;
+	color:#FFF;
 }
 
 /* Description Lists */
