Slight refactor on the flexbox.

--- a/src/stylesheets/main.less
+++ b/src/stylesheets/main.less
@@ -6,6 +6,8 @@
 
 // Partials.
 // Include your custom CSS files here as above.
+@import "partials/base.less";
+@import "partials/headers.less";
 @import "partials/type.less";
 @import "partials/states.less";
 @import "partials/apologies.less";
