--- a/src/stylesheets/partials/headers.less
+++ b/src/stylesheets/partials/headers.less
@@ -7,5 +7,10 @@ header {
 
 	.page-title, .see-below, .status-notices {
 		width:100%;
+		padding:(@grid-verticle-gutter-width / 2);
+	}
+
+	.status-notices {
+		padding:@grid-verticle-gutter-width (@grid-verticle-gutter-width / 2);
 	}
 }
