--- a/src/stylesheets/partials/type.less
+++ b/src/stylesheets/partials/type.less
@@ -10,10 +10,6 @@ h2, h3 {
 	margin-top:0;
 }
 
-.page-title {
-	padding:(@grid-verticle-gutter-width / 2) 0;
-}
-
 /* Links. */
 
 .see-below {
@@ -36,6 +32,7 @@ a.see-below:hover {
 
 dt {
 	font-weight:inherit;
+	text-align:left !important;
 }
 
 dl {
