Tweaks to the see-below button.

--- a/src/stylesheets/partials/headers.less
+++ b/src/stylesheets/partials/headers.less
@@ -5,9 +5,13 @@ header {
 	justify-content:space-between;
 	min-height:100%;
 
-	.page-title, .see-below, .status-notices {
+	.page-title, .status-notices, .fold-nav {
 		width:100%;
 		padding:(@grid-verticle-gutter-width / 2);
+	}
+
+	.fold-nav {
+		padding-bottom:0;
 	}
 
 	.status-notices {
