--- a/src/stylesheets/partials/type.less
+++ b/src/stylesheets/partials/type.less
@@ -30,6 +30,7 @@ a.see-below:hover {
 	background-color: rgba(0, 0, 0, 0.03); // Highlight the bar with a darker tint.
 	opacity:1;
 	color:#FFF;
+	border-radius:10px;
 }
 
 /* Description Lists */
