--- a/src/stylesheets/partials/headers.less
+++ b/src/stylesheets/partials/headers.less
@@ -1,8 +1,16 @@
 header {
-	display:flex;
-	flex-direction:column;
-	align-items:center;
-	justify-content:space-between;
+	display: -webkit-box;
+	display: -moz-box;
+	display: box;
+
+	-webkit-box-orient: vertical;
+	-moz-box-orient: vertical;
+	box-orient: vertical;
+
+	-webkit-box-pack: justify;
+	-moz-box-pack: justify;
+	box-pack: justify;
+	
 	min-height:100%;
 
 	.page-title, .status-notices, .fold-nav {
