Switched the current apology updates to a dl as below.

--- a/src/stylesheets/partials/type.less
+++ b/src/stylesheets/partials/type.less
@@ -57,3 +57,10 @@ dd {
 	display:block;
 	opacity:0.8; // TODO: Switch for a CSS3 mixin.
 }
+
+/* Muted Text */
+
+.text-muted {
+	color:inherit;
+	opacity:0.75;
+}
