Added CSS which styles the first update on a current apology to be a larger font.

--- a/src/stylesheets/partials/type.less
+++ b/src/stylesheets/partials/type.less
@@ -50,6 +50,10 @@ dd {
 	font-size:16px;
 }
 
+.current-apology dl dt:first-child, .current-apology dl dd:nth-child(2) {
+	font-size:1.1em; // Enlarge the font size of the top update on a current apology.
+}
+
 /* Timestamps */
 
 .block-time {
