Split the start/end times for previous apologies.

--- a/src/stylesheets/partials/custom-bootstrap.less
+++ b/src/stylesheets/partials/custom-bootstrap.less
@@ -6,6 +6,15 @@
 @brand-success: #7AB800;
 @brand-warning: #FF7B29;
 
+// State Colours.
+@state-success-text:             @brand-success;
+@state-success-bg:               @brand-success;
+@state-success-border:           darken(spin(@state-success-bg, -10), 5%);
+
+@state-warning-text:             @brand-warning;
+@state-warning-bg:               @brand-warning;
+@state-warning-border:           darken(spin(@state-warning-bg, -10), 5%);
+
 // Typography
 @font-family-sans-serif: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif; 
 @font-size-base: 18px;
