--- a/src/stylesheets/partials/type.less
+++ b/src/stylesheets/partials/type.less
@@ -26,11 +26,19 @@ h3 {
 }
 
 a.see-below:hover {
+	color:#FFF;
+
 	text-decoration: none; // Remove the underline effect.
 	background-color: rgba(0, 0, 0, 0.03); // Highlight the bar with a darker tint.
-	opacity:1;
-	color:#FFF;
-	border-radius:10px;
+	opacity:1; // Unfade the bar.
+
+	// Subtle border radius on the top corners.
+	-webkit-border-top-left-radius: 10px;
+	-webkit-border-top-right-radius: 10px;
+	-moz-border-radius-topleft: 10px;
+	-moz-border-radius-topright: 10px;
+	border-top-left-radius: 10px;
+	border-top-right-radius: 10px;
 }
 
 /* Description Lists */
