--- a/src/stylesheets/partials/headers.less
+++ b/src/stylesheets/partials/headers.less
@@ -1,4 +1,9 @@
+/* Layout for the page header block. */
+
 header {
+
+	/* Box model for verticaly centering content */
+
 	display:flex;
 	flex-direction:column;
 	align-items:stretch;
@@ -10,11 +15,31 @@ header {
 		padding:(@grid-verticle-gutter-width / 2);
 	}
 
+	/* Fold jump navigation. */
+
 	.fold-nav {
 		padding-bottom:0;
 	}
 
+	/* Status notices. */
+
 	.status-notices {
 		padding:@grid-verticle-gutter-width (@grid-verticle-gutter-width / 2);
 	}
+
+	/* State based colouring for the header of the page. */
+
+	&[class*='state-'] {
+		color:#FFF;
+	}
+
+	&.state-warning {
+		background-color:@brand-warning;
+	}
+
+	&.state-ok {
+		background-color:@brand-success;
+	}
+
 }
+
