Reworked the line spacing on the apologies.

--- a/src/stylesheets/partials/type.less
+++ b/src/stylesheets/partials/type.less
@@ -47,11 +47,23 @@ a.see-below:hover {
 
 dt {
 	font-weight:inherit; // Remove the bold font default.
-	text-align:left !important; // Remove the right alignment.
+}
+
+dd {
+	line-height: 1.6em;
+	margin-bottom:1.2em;
+}
+
+dd:last-child {
+	margin-bottom:0;
 }
 
 dl {
-	margin-bottom:0;
+	margin:1.2em 0;
+}
+
+.previous-apology dt {
+	text-align:left !important; // Remove the right alignment.
 }
 
 // Enlarge the font size of the top update on a current apology.
