Another minor tweak to spacing.

--- a/src/stylesheets/partials/apologies.less
+++ b/src/stylesheets/partials/apologies.less
@@ -4,8 +4,11 @@
 	background-color: rgba(255, 255, 255, 0.05);
 }
 
-.apology {
+.status-notice {
 	padding:(@grid-verticle-gutter-width / 2) 0;
+}
+
+.apology {
 	border-bottom:1px solid rgba(255, 255, 255, 0.2);
 }
 
