--- a/src/stylesheets/partials/headers.less
+++ b/src/stylesheets/partials/headers.less
@@ -4,10 +4,10 @@ header {
 
 	/* Box model for verticaly centering content */
 
-	display:flex;
-	flex-direction:column;
-	align-items:stretch;
-	justify-content:space-between;
+	.flex-display(flex);
+	.flex-direction(column);
+	.align-items(stretch);
+	.justify-content(space-between);
 
 	min-height:100%;
 
