--- a/src/stylesheets/partials/headers.less
+++ b/src/stylesheets/partials/headers.less
@@ -9,7 +9,7 @@ header {
 	.align-items(stretch);
 	.justify-content(space-between);
 
-	min-height:100%;
+	height:100%;
 
 	.page-title, .status-notices, .fold-nav {
 		padding:(@grid-verticle-gutter-width / 2);
