--- a/src/stylesheets/partials/headers.less
+++ b/src/stylesheets/partials/headers.less
@@ -9,7 +9,7 @@ header {
 	.align-items(stretch);
 	.justify-content(space-between);
 
-	height:100%;
+	height:100%; 
 
 	.page-title, .status-notices, .fold-nav {
 		padding:(@grid-verticle-gutter-width / 2);
@@ -19,6 +19,8 @@ header {
 
 	.fold-nav {
 		padding-bottom:0;
+		position:relative;
+		bottom:0;
 	}
 
 	/* State based colouring for the header of the page. */
