--- a/src/stylesheets/partials/headers.less
+++ b/src/stylesheets/partials/headers.less
@@ -2,14 +2,7 @@
 
 header {
 
-	/* Box model for verticaly centering content */
-
-	.flex-display(flex);
-	.flex-direction(column);
-	.align-items(stretch);
-	.justify-content(space-between);
-
-	height:100%; 
+	min-height:100%; 
 
 	.page-title, .status-notices, .fold-nav {
 		padding:(@grid-verticle-gutter-width / 2);
@@ -19,8 +12,6 @@ header {
 
 	.fold-nav {
 		padding-bottom:0;
-		position:relative;
-		bottom:0;
 	}
 
 	/* State based colouring for the header of the page. */
@@ -39,3 +30,35 @@ header {
 
 }
 
+.js.flexbox {
+	header {
+
+		/* Flexbox for verticaly centering and spacing the header elements. */
+
+		.flex-display(flex);
+		.flex-direction(column);
+		.align-items(stretch);
+		.justify-content(space-between);
+
+	}
+}
+
+.js.no-flexbox {
+	header {
+
+		/* Without flexbox support we pin the fold-nav to the bottom of the header using absolute positioning. */
+
+		position:relative;
+		padding-bottom:150px;
+
+		.fold-nav {
+			position:absolute;
+			bottom:0;
+			left:0;
+			right:0;
+			margin-left:auto;
+			margin-right:auto;
+		}
+
+	}
+}
